--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slashdiscord.js",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "An advanced slash command handler for discord",
   "main": "dist/index.js",
   "directories": {
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
-    "discord.js": "^12.5.1",
     "node-fetch": "^2.6.1"
   },
+  "peerDependencies": {
+    "discord.js": "^12.5.1"
+  },
   "devDependencies": {
+    "discord.js": "^12.5.1",
     "@types/chalk": "^2.2.0",
     "@types/clui": "^0.3.0",
     "@types/figlet": "^1.2.1",
